# at2_api_muhammad_iqbal

./: Dockerfile  Makefile  README.md  docker_command_build_push.txt  github.txt  pyproject.toml  requirements.txt
app/: main.py
models/: check_model.ipynb  precipitation.pkl  rain.pkl
